script updated for travis config

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,12 @@
 language: ruby
-script: 'true'
+env:
+- DB=sqlite3
+script:
+- bundle install  
+- bundle exec rake db:create
+- bundle exec rake db:migrate --trace
+
+
+
+
 
