--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
+rvm:
+- "2.2.1"
 language: ruby
 env:
 - DB=sqlite3
+before_install: gem install bundler
 script:
 - bundle install  
 - bundle exec rake db:create
