--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
 - bundle install  
 - RAILS_ENV=development bundle exec RAIS_ENV=rake db:create
 - RAILS_ENV=development bundle exec rake db:migrate --trace
+- rake test
 
 
 
