--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
 - develpoment
 before_install: gem install bundler
 script:
-- bundle install --jobs=3 --retry=3 
+- bundle install --jobs=3 --retry=3 --no-deployment 
 - RAILS_ENV=development bundle exec RAIS_ENV=rake db:create
 - RAILS_ENV=development bundle exec rake db:migrate --trace
 - rake test
