--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ rvm:
 language: ruby
 env:
 - develpoment
-before_install: gem install bundler
+before_install: 
+- gem install bundler
 script:
 - bundle install --jobs=3 --retry=3 --no-deployment 
 - RAILS_ENV=development bundle exec RAIS_ENV=rake db:create
