--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 - gem install bundler
 - bundle install --jobs=3 --retry=3 --no-deployment 
 script:
-- RAILS_ENV=development bundle exec RAIS_ENV=rake db:create
+- RAILS_ENV=development bundle exec rake db:create
 - RAILS_ENV=development bundle exec rake db:migrate --trace
 - rake test
 
